--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     <div id="tf-home" class="text-center">
         <div class="overlay">
             <div class="content">
-                <h1>Welcome on <strong><span class="color">Spirit8</span></strong></h1>
-                <p class="lead">We are a digital agency with <strong>years of experience</strong> and with <strong>extraordinary people</strong></p>
+                <h1>Welcome on <strong><span class="color">Teens Code</span></strong></h1>
+                <p class="lead"> Your path to <strong>learning code</strong>as a<strong>teenager.</strong></p>
                 <a href="#tf-about" class="fa fa-angle-down page-scroll"></a>
             </div>
         </div>
