--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="overlay">
             <div class="content">
                 <h1>Welcome on <strong><span class="color">Teens Code</span></strong></h1>
-                <p class="lead"> Your path to <strong>learning code</strong>as a<strong>teenager.</strong></p>
+                <p class="lead"> Your path to <strong>learning code</strong> as a <strong> teenager.</strong></p>
                 <a href="#tf-about" class="fa fa-angle-down page-scroll"></a>
             </div>
         </div>
@@ -97,7 +97,7 @@
                     <div class="about-text">
                         <div class="section-title">
                             <h4>About us</h4>
-                            <h2>Some words <strong>about us</strong></h2>
+                            <h2>We belive everyone should </h2>
                             <hr>
                             <div class="clearfix"></div>
                         </div>
