--- a/index.html
+++ b/index.html
@@ -97,15 +97,15 @@
                     <div class="about-text">
                         <div class="section-title">
                             <h4>About us</h4>
-                            <h2>We belive everyone should </h2>
+                            <h2>We believe everyone should learn coding when they are young.</h2>
                             <hr>
                             <div class="clearfix"></div>
                         </div>
-                        <p class="intro">We love building and rebuilding brands through our  specific skills. Using colour, fonts, and illustration, we brand companies in a way they will never forget.</p>
+                        <p class="intro"></p>
                         <ul class="about-list">
                             <li>
                                 <span class="fa fa-dot-circle-o"></span>
-                                <strong>Mission</strong> - <em>We deliver uniqueness and quality</em>
+                                <strong>Learn</strong><em>Learn coding with our easy to follow lectures.</em>
                             </li>
                             <li>
                                 <span class="fa fa-dot-circle-o"></span>
