--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                 <div class="col-md-6">
                     <div class="about-text">
                         <div class="section-title">
-                            <h4>About us</h4>
-                            <h2>We believe everyone should learn coding when they are young.</h2>
+                            <h4>About Us</h4>
+                            <h2>We believe everyone should <br> learn coding when they are <young.</h2>
                             <hr>
                             <div class="clearfix"></div>
                         </div>
