--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <div class="about-text">
                         <div class="section-title">
                             <h4>About Us</h4>
-                            <h2>We believe everyone should <br> learn coding when they are <young.</h2>
+                            <h2>Become a coding maestro</h2>
                             <hr>
                             <div class="clearfix"></div>
                         </div>
@@ -109,7 +109,7 @@
                             </li>
                             <li>
                                 <span class="fa fa-dot-circle-o"></span>
-                                <strong>Skills</strong> - <em>Delivering fast and excellent results</em>
+                                <strong>Practice</strong> - <em>Practice </em>
                             </li>
                             <li>
                                 <span class="fa fa-dot-circle-o"></span>
