--- a/index.html
+++ b/index.html
@@ -55,20 +55,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Spirit8</a>
+          <a class="navbar-brand" href="index.html">Teens Code</a>
         </div>
          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <!-- Collect the nav links, forms, and other content for toggling -->
        
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#tf-home" class="page-scroll">Home</a></li>
-            <li><a href="#tf-about" class="page-scroll">About</a></li>
-            <li><a href="#tf-team" class="page-scroll">Team</a></li>
-            <li><a href="#tf-services" class="page-scroll">Services</a></li>
-            <li><a href="#tf-works" class="page-scroll">Portfolio</a></li>
-            <li><a href="#tf-testimonials" class="page-scroll">Testimonials</a></li>
-            <li><a href="#tf-contact" class="page-scroll">Contact</a></li>
-            <li><a href="#tf-signin">Sign In</a></li>
+            <li><a href="#tf-home"></a>Features</a></li>
+            <li><a href="#tf-about">Pricing</a></a></li>
+            <li><a href="#tf-services">Sign In</a></li>
+            <li><a href="#tf-works">Free Trial</a></li>
+            
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -97,8 +94,8 @@
                 <div class="col-md-6">
                     <div class="about-text">
                         <div class="section-title">
-                            <h4>About Us</h4>
-                            <h2>Become a coding maestro</h2>
+                            <h4>You can become a coding Maestro.</h4>
+                            <h2>And it is not as you think!</h2>
                             <hr>
                             <div class="clearfix"></div>
                         </div>
