--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#tf-features">Features</a></li>
             <li><a href="#tf-Pricing">Pricing</a></li>
-            <li><a href="#tf-SignIn">Sign In</a></li>
+            <li><a href="login.html">Sign In</a></li>
             <li><a href="#tf-SignUp">Free Trial</a></li>
             
           </ul>
